fix: invisible action buttons in Bootstrap

--- a/packages/default/scss/upload/_theme.scss
+++ b/packages/default/scss/upload/_theme.scss
@@ -41,6 +41,7 @@
 
             .k-upload-action {
                 opacity: .6;
+                color: inherit;
                 background: none;
                 border-width: 0;
                 box-shadow: none;
